<resources>
    <string name="app_name">AlphaUp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="startingimageview" translatable="false">startingImageView</string>
    <string name="aboutusText">We are the exclusive agent for Alpha fitness clothing Our goal is to be more attractive to customers for super professionalism and the spread of products in the Middle East to facilitate Getting the perfect body to become a bigger society Practicing sports at any time and any place with technology Electrical stimulation where it\'s a safe technique promotes growth, Identify, tighten muscles, lose weight and stimulate the cycle Bloody</string>
    <string name="objectives">Believing in the importance of sport in the life of the individual and society We took the initiative to provide our products in the Middle East, and provide a service After-sales to help our community members who seek To improve their physical fitness and therefore mental as Sport has a big role in improving the psychological state if it is continued</string>
    <string name="wyeSports">Exercise in all its forms is one of the most important and effective ways to ensure the maintenance of physical and mental health, as there are many benefits of sports on the psychological and physical levels, the most important of which is reducing the percentage of fat in the body, and increasing muscle mass, And maintain the ideal weight. Sleep enough, get rid of insomnia, get the energy the body needs, open the appetite, eat healthy, and avoid smoking. Providing a healthy life, through which happiness, satisfaction and contentment are achieved</string>
    <string name="electromyalicstimulationlayout">It is a mechanism that stimulates muscle contraction using electrical impulses. Interest in electrical muscle stimulation has increased in the few years Past for many reasons, including: The possibility of using it as a tool in strength training For healthy people and athletes; and as a test tool to assess neurological function or muscularly in the body; and as a post-workout recovery tool for athletes. Generates The device impulses and sends them to the body through electrodes placed on The skin is near the muscles to be alerted.In general, The electrodes are in the form of small pieces that can be attached to the skin.The impulses mimic the action potential coming from the electrical nervous system, and cause the muscles to contract. Sports scientists have referred to electrical muscle stimulation As a complementary means of athletic training, they published the results of research that examined the effect of this method.</string>
    <string name="email_address">العنوان البريدي</string>
    <string name="password">كلمة السر</string>
    <string name="or" translatable="false">Or</string>
    <string name="skip">Skip</string>
    <string name="signUp_fragment">Sign Up</string>
    <string name="back">عُد للخلف</string>
    <string name="products">Products</string>
    <string name="buy_what_you_want">Buy what you want</string>
    <string name="sign_out">تسجيل خروج</string>
    <string name="let_s_start">ابدأ و استمتع معنا</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="textTermsAndConditions">We are pleased to help you and manage your orders regarding returning or replacing products that have been delivered damaged and contacting us via WhatsApp on the number: 01020523601 Exchange and return conditions: 1- The goods are not refundable and not exchanged without a bill. 2- Exchange within an hour from the time of the bill. 3- The replacement does not include vegetables and fruits if they are not damaged upon delivery. 4- When replacing or returning undamaged products, the delivery value cannot be refunded. Site Policy: Prices on the site may not be identical to the shop bill due to the continuous change in the price of vegetables and Knowing that the shop bill is the reference.</string>
    <string name="textAboutUs">We always care about the details we provide to you, rest assured.
        ❣️ 🌿Don\'t overwhelm yourself with searching abroad we offer you all that is new.
        ✌️ 🌿Unparalleled quality Just search for what you want freely.
        🍃 🌿Try the product and make sure our quality is true We keep offering you world-class quality, we hope you like it.</string>
    <string name="phone_number">رقم الموبايل</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="home">الرئيسية</string>
    <string name="categories">الأقسام</string>
    <string name="favorite">المفضلة</string>
    <string name="profile">الحساب</string>

    <!-- ca-app-pub-8593037231237434/2608071480 for banner id -->
    <!-- ca-app-pub-3940256099942544/9214589741 for banner id testing -->
    <string name="idAd" translatable="false">"ca-app-pub-3940256099942544/9214589741"</string>
    <string name="productsDrawer">منتجاتنا</string>
    <string name="sectionsDrawer">الأقسام</string>
    <string name="favoriteDrawer">قائمتك المفضلة</string>
    <string name="mainDrawer">الرئيسية</string>
    <string name="cartDrawer">عربة الشراء</string>
    <string name="accountDrawer">الحساب</string>
    <string name="myAccountDrawer">حسابي</string>
    <string name="signupDrawer">تسجيل دخول بحساب آخر</string>

</resources>