<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view" >


    <item android:title="@string/mainDrawer">
        <menu>

            <item
                android:id="@+id/AllProductsItemNavDrawer"
                android:icon="@drawable/baseline_home_24"
                android:title="@string/productsDrawer" />

            <item
                android:id="@+id/CategoriesItemNavDrawer"
                android:icon="@drawable/baseline_category_24"
                android:title="@string/sectionsDrawer" />

            <item
                android:id="@+id/FavoriteItemNavDrawer"
                android:icon="@drawable/baseline_favorite_24"
                android:title="@string/favoriteDrawer" />

            <item
                android:id="@+id/MyCartItemNavDrawer"
                android:icon="@drawable/baseline_shopping_cart_24"
                android:title="@string/cartDrawer" />

        </menu>
    </item>

            <item
                android:id="@+id/ProfileItem"
                android:title="@string/myAccountDrawer"
                android:icon="@drawable/baseline_person_24"
                />

            <item android:id="@+id/signOut"
                android:title="@string/signupDrawer"
                android:icon="@drawable/backarrow"
                />


</menu>