<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/signinAndSignupConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.LoginFragment">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/loginpagelayout"
            tools:ignore="ContentDescription,ImageContrastCheck" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            style="@style/loginFragmentEditTextStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:alpha="0.8"
            android:background="@drawable/emailgroup"
            android:ems="10"
            android:fontFamily="@font/poppins"
            android:hint="@string/email_address"
            android:importantForAutofill="no"
            android:inputType="textWebEmailAddress|textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/guideline16"
            app:layout_constraintEnd_toStartOf="@+id/guideline14"
            app:layout_constraintStart_toStartOf="@+id/guideline13"
            app:layout_constraintTop_toTopOf="@+id/guideline15" />


        <EditText
            android:id="@+id/editTextTextPassword"
            style="@style/loginFragmentEditTextStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:alpha="0.8"
            android:background="@drawable/passwordgroup"
            android:ems="10"
            android:fontFamily="@font/poppins"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPersonName|textPassword"
            app:layout_constraintBottom_toTopOf="@+id/guideline17"
            app:layout_constraintEnd_toStartOf="@+id/guideline14"
            app:layout_constraintStart_toStartOf="@+id/guideline13"
            app:layout_constraintTop_toTopOf="@+id/guideline16" />

        <EditText
            android:id="@+id/editTextPhoneNumber"
            style="@style/loginFragmentEditTextStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:alpha="0.8"
            android:background="@drawable/phonenumbachground"
            android:fontFamily="@font/poppins"
            android:hint="@string/phone_number"
            android:importantForAutofill="no"
            android:inputType="phone"
            app:layout_constraintBottom_toTopOf="@+id/guideline32"
            app:layout_constraintEnd_toStartOf="@+id/guideline14"
            app:layout_constraintStart_toStartOf="@+id/guideline13"
            app:layout_constraintTop_toTopOf="@+id/guideline17"
            tools:ignore="VisualLintTextFieldSize" />


        <ImageButton
            android:id="@+id/signInBtn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:backgroundTint="#00FF6E00"
            app:layout_constraintBottom_toTopOf="@+id/guideline18"
            app:layout_constraintEnd_toStartOf="@+id/guideline14"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline13"
            app:layout_constraintTop_toTopOf="@+id/guideline32"
            app:srcCompat="@drawable/signinbtnlogin"
            tools:ignore="ContentDescription,SpeakableTextPresentCheck,ImageContrastCheck" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:text="@string/or"
            android:textColor="#03041D"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/guideline19"
            app:layout_constraintEnd_toStartOf="@+id/guideline14"
            app:layout_constraintStart_toStartOf="@+id/guideline13"
            app:layout_constraintTop_toTopOf="@+id/guideline18" />

        <ImageButton
            android:id="@+id/googleBtn"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:backgroundTint="#00FF6E00"
            app:layout_constraintBottom_toTopOf="@+id/guideline20"
            app:layout_constraintEnd_toStartOf="@+id/guideline14"
            app:layout_constraintStart_toStartOf="@+id/guideline13"
            app:layout_constraintTop_toTopOf="@+id/guideline19"
            app:srcCompat="@drawable/googleicon"
            tools:ignore="ContentDescription,SpeakableTextPresentCheck" />


        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/donttext"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/signUpText"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline127"
            app:layout_constraintTop_toTopOf="@+id/guideline20" />

        <TextView
            android:id="@+id/signUpText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/signuptext"
            android:fontFamily="@font/poppins"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline14"
            app:layout_constraintStart_toStartOf="@+id/guideline129"
            app:layout_constraintTop_toTopOf="@+id/guideline20" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.90" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.3" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.4" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.74" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.8" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.9" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline32"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.6" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline127"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.14" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline128"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.6569343" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline129"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.68126523" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>